##Text encoding: utf-8

2008-11-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fragment.cc: fixed issues when loading a fragment with
	a residue.
	* libs/gcp/molecule.cc: ditto.
	* libs/gcu/document.h: fixed typo in documentation.

2008-11-24  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: fixed font for attached hydrogen atoms.
	* libs/gcp/document.cc: fixed printing natural size.
	* libs/gcp/view.cc: fixed size for pdf, ps and eps exports.

2008-11-23  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/application.h: make m_Style accessible.
	* plugins/paint/arrows/arrowtool.cc: make samples in property
	page visible for dark themes.

2008-11-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* goffice/gchemutils.cc: removed remaining #ifdef ENABLE_NLS
	* libs/gcu/element.cc: ditto.
	* plugins/loaders/cdx/cdx.cc: ditto.
	* plugins/loaders/cdxml/cdxml.cc: ditto.

2008-11-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: don't crash or end in an infinite loop when adding
	a fourth bond to phophorus. [#24863]
	* libs/gcp/bond.cc: avoid a crash when a bond is created between two
	molecules. [#24853]

2008-11-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: theme reference fix.
	* libs/gcp/fragment.cc: major update fixes.
	* plugins/paint/bonds/bondtool.cc: fix undo when adding a bond between two
	molecules.
	* plugins/paint/text/fragmenttool.cc: fix bond update when changing an
	atom to a fragment.

2008-11-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/atom.cc: do not add the hydrogens item when there are
	no attached hydrogens.
	* libs/gcp/bond.cc: a better fix for double bonds drawing.
	* libs/gcp/fragment.cc: always set the atom as child.
	* libs/gcp/theme.cc: call g_type_init.
	* libs/gcu/object.h: fixed documentation.
	* libs/gcu/residue.cc: don't free lang before using it.
	* plugins/paint/selection/selectiontool.cc: display an error message box